syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "auth";
option objc_class_prefix = "auth";
package Auth;

service Auth{
    rpc SignIn(SignInReq) returns (SignInRes){}
    rpc SignUp(SignUpReq) returns (SignInRes){}
    rpc ResetPassword(ResetReq) returns (ResetRes){}
    rpc ResetPasswordFinalStep(ResetPasswordFinalStepReq) returns (ResetPasswordFinalStepRes){}
}

message SignInReq{
    string username = 1;
    string password = 2;
}

message SignInRes{
    string status=1;
    string error=4;
    string response=2;
    string type=3;
}

message SignUpReq{
    string username = 1;//username == email
    string password = 2;
    string name=3;
}
message ResetReq{
    string type=1;
    string username=3;
}
message ResetRes{
    string status=1;
    string error=2;
}
message ResetPasswordFinalStepReq{
    string username=1;
    string token=2;
    string password=3;
}
message ResetPasswordFinalStepRes{
    string status=1;
    string error=2;
    string cookie=3;
    string id=4;
}